----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-03-09 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php, libraries/display*, lang/*: 
      bug 887933: avoid generating a nested form, and show a warning
      when user should define a primary key to get the Edit and Delete links
    * lang/norwegian:  Updated, thanks to Sven-Erik Andersen (sven-erik).
    * lang/indonesian: Updated, thanks to Rachim Tamsjadi (tamsy).

2004-03-09 Michal Cihar  <backtowork@cihar.com>
    * libraries/dbi/mysql.dbi.lib.php: Remove possible double charset
      conversion.
    * libraries/dbi/mysql.dbi.lib.php, libraries/dbi/mysqli.dbi.lib.php: Fix
      PMA_mysql_fetch_array return value for last result (bug #905223).
    * browse_foreigners.php, libraries/common.lib.php,
      libraries/display_tbl.lib.php, libraries/relation.lib.php,
      libraries/sqlparser.lib.php, libraries/string.lib.php,
      libraries/transformations/text_plain__substr.inc.php: Use charset aware
      substr and strlen functions (bugs #854755 and #910575).
    * export.php: Fix buffer length counting, fix error detection.
    * libraries/export/latex.php: Fix undefined variable warning.
    * libraries/config_import.lib.php, libraries/common.lib.php,
      libraries/display_export.lib.php, libraries/export/sql.php, lang/*: Can
      add custom text to SQL export headers (RFE #874361).
    * config.footer.inc.php, config.header.inc.php, footer.inc.php,
      header.inc.php, libraries/auth/cookie.auth.lib.php,
      libraries/auth/http.auth.lib.php: Support for site configurable header
      and footer (patch #893477).

2004-03-05 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php: bug 909752, floating point digit
    * libraries/sqlparser.lib.php: bug 906551, GRANT...TO

2004-03-03 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php, tbl_replace_fields.php: bug 907510, invalid
      escaping of + in ENUM
