@@ -5,6 +5,9 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2004-03-10 Michal Cihar  <michal@cihar.com>
+    * export.php: Correctly report error when export fails.
+
 2004-03-09 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/common.lib.php, libraries/display*, lang/*: 
       bug 887933: avoid generating a nested form, and show a warning
@@ -22,7 +25,8 @@ $Source$
       libraries/sqlparser.lib.php, libraries/string.lib.php,
       libraries/transformations/text_plain__substr.inc.php: Use charset aware
       substr and strlen functions (bugs #854755 and #910575).
-    * export.php: Fix buffer length counting, fix error detection.
+    * export.php: Fix buffer length counting, fix error detection (bug
+      #909710).
     * libraries/export/latex.php: Fix undefined variable warning.
     * libraries/config_import.lib.php, libraries/common.lib.php,
       libraries/display_export.lib.php, libraries/export/sql.php, lang/*: Can
